--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run get_ios.yaml playbook
-        run: ansible-playbook get_ios.yaml
+        run: ansible-playbook playbooks/get_ios.yaml
