--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,4 +4,4 @@ remote_user = ansible_user
 private_key_file = ~/.ssh/id_rsa 
 host_key_checking = False # Disable for EVE-NG if you encounter issues with host key prompts (use with caution in production)
 gather_facts = False # Not needed for network devices for this task, speeds things up
-ansible_network_os = ios # Specify the network operating system
+ansible_network_os = ios # Specify the network operating syste
