--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,13 @@
 [defaults]
 inventory = ./inventory/hosts.yaml
 remote_user = ansible_user
-private_key_file = ~/.ssh/id_rsa 
-host_key_checking = False # Disable for EVE-NG if you encounter issues with host key prompts (use with caution in production)
-gather_facts = False # Not needed for network devices for this task, speeds things up
-ansible_network_os = ios # Specify the network operating syste
+private_key_file = ~/.ssh/id_rsa
+host_key_checking = False   # Disable for EVE-NG (avoid prompts)
+gather_facts = False        # Not needed for network devices
+ansible_network_os = ios    # Cisco IOS devices
+
+[ssh_connection]
+ssh_args = -oKexAlgorithms=+diffie-hellman-group14-sha1 \
+           -oHostKeyAlgorithms=+ssh-rsa \
+           -oPubkeyAcceptedAlgorithms=+ssh-rsa
+
