--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,7 +1,6 @@
 ---
-# Include the vault file
-# This tells Ansible to load variables from the encrypted vault.yaml
-# The path is relative to the directory containing group_vars/all.yaml
-# So, from group_vars/all.yaml, we go up one level (..) to automatenet/
-# then into vars/ and specify vault.yaml.
-- !include ../vars/vault.yaml
+ansible_network_os: ios
+ansible_connection: network_cli
+
+# Load vars from vault.yaml automatically
+# No need to paste encrypted text here
