--- a/inventory/hosts.yaml
+++ b/inventory/hosts.yaml
@@ -1,4 +1,3 @@
----
 all:
   children:
     routers:
@@ -8,5 +7,5 @@ all:
         R2:
           ansible_host: 192.168.29.76
       vars:
-        ansible_network_os: ios
-        ansible_connection: network_cli # This is the crucial line to add
+        ansible_network_os: cisco.ios.ios
+        ansible_connection: network_cli
